[gd_scene load_steps=12 format=3 uid="uid://b12y1mtt1wy1q"]

[ext_resource type="Script" path="res://characters/enemies/asteroids/scripts/asteroid_05.gd" id="1_gogqy"]
[ext_resource type="Material" uid="uid://crbsx65ef4n10" path="res://shaders/asteroid_01.tres" id="2_kue04"]
[ext_resource type="Texture2D" uid="uid://b7kosjsjntqmb" path="res://resources/asteroids/asteroids.png" id="3_kelfh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0f6gd"]
atlas = ExtResource("3_kelfh")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_goxvj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f6gd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_706cc"]
radius = 17.0
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5h78p"]
radius = 21.0
height = 44.0

[sub_resource type="Animation" id="Animation_nef8n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_w0lxg"]
resource_name = "flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_imfmb"]
resource_name = "idle"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_igu50"]
_data = {
"RESET": SubResource("Animation_nef8n"),
"flash": SubResource("Animation_w0lxg"),
"idle": SubResource("Animation_imfmb")
}

[node name="asteroid" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_gogqy")

[node name="sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = ExtResource("2_kue04")
sprite_frames = SubResource("SpriteFrames_goxvj")

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_706cc")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="collision_shape" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CapsuleShape2D_5h78p")

[node name="visibility_notifier" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(0, 0, 0, 1)

[node name="hit_flash_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_igu50")
}

[connection signal="body_entered" from="hitbox" to="." method="on_hitbox_body_entered"]
[connection signal="screen_exited" from="visibility_notifier" to="." method="on_asteroid_visibility_notifier_screen_exited"]
